{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "3dc9705e-322c-43c4-a886-e6e5b8f6b8c0",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Value",
                    "id": "d571cd4b-5870-4a05-ad1c-42bb5cf89fa5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RemoveObject",
                    "type": "Button",
                    "id": "e29c8037-cd8c-4ee0-ad93-2102ac80cf0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4bd4abb3-0b99-4820-9f64-aad849f5c89f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2786c74-5bce-4b13-af4c-8fab88502f29",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}